// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JIRA wiki markup - Images and attachments [CS-216] should parse media filename with "(" and ")" 1`] = `
{
  "content": [
    {
      "attrs": {
        "layout": "center",
        "localId": null,
        "width": null,
        "widthType": null,
      },
      "content": [
        {
          "attrs": {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "__mediaTraceId": null,
            "alt": "",
            "collection": "",
            "height": 183,
            "id": "uuid-ScreenShot",
            "localId": null,
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": 200,
          },
          "type": "media",
        },
      ],
      "type": "mediaSingle",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Images and attachments [CS-1404] should parse attachments as one media group 1`] = `
{
  "content": [
    {
      "content": [
        {
          "attrs": {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "__mediaTraceId": null,
            "alt": "",
            "collection": "",
            "height": null,
            "id": "uuid-a-doc (jadsjdasjadsjkdasjk)",
            "localId": null,
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": null,
          },
          "type": "media",
        },
        {
          "attrs": {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "__mediaTraceId": null,
            "alt": "",
            "collection": "",
            "height": null,
            "id": "uuid-not-empty (askjsajnkjknads)",
            "localId": null,
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": null,
          },
          "type": "media",
        },
      ],
      "type": "mediaGroup",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Images and attachments [CS-1404] should parse attachments inside tables as single media group 1`] = `
{
  "content": [
    {
      "attrs": {
        "__autoSize": false,
        "displayMode": null,
        "isNumberColumnEnabled": false,
        "layout": "default",
        "localId": "",
        "width": null,
      },
      "content": [
        {
          "attrs": {
            "localId": null,
          },
          "content": [
            {
              "attrs": {
                "background": null,
                "colspan": 1,
                "colwidth": null,
                "localId": null,
                "rowspan": 1,
              },
              "content": [
                {
                  "attrs": {
                    "localId": null,
                  },
                  "content": [
                    {
                      "text": "colum 1 ",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
                {
                  "content": [
                    {
                      "attrs": {
                        "__contextId": null,
                        "__displayType": null,
                        "__external": false,
                        "__fileMimeType": null,
                        "__fileName": null,
                        "__fileSize": null,
                        "__mediaTraceId": null,
                        "alt": "",
                        "collection": "",
                        "height": null,
                        "id": "uuid-a-doc (jadsjdasjadsjkdasjk)",
                        "localId": null,
                        "occurrenceKey": null,
                        "type": "file",
                        "url": null,
                        "width": null,
                      },
                      "type": "media",
                    },
                    {
                      "attrs": {
                        "__contextId": null,
                        "__displayType": null,
                        "__external": false,
                        "__fileMimeType": null,
                        "__fileName": null,
                        "__fileSize": null,
                        "__mediaTraceId": null,
                        "alt": "",
                        "collection": "",
                        "height": null,
                        "id": "uuid-not-empty (askjsajnkjknads)",
                        "localId": null,
                        "occurrenceKey": null,
                        "type": "file",
                        "url": null,
                        "width": null,
                      },
                      "type": "media",
                    },
                  ],
                  "type": "mediaGroup",
                },
              ],
              "type": "tableCell",
            },
            {
              "attrs": {
                "background": null,
                "colspan": 1,
                "colwidth": null,
                "localId": null,
                "rowspan": 1,
              },
              "content": [
                {
                  "attrs": {
                    "localId": null,
                  },
                  "content": [
                    {
                      "text": "column 2",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
      ],
      "type": "table",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Images and attachments [CS-1404] should parse attachments separated by a single new line as one media group 1`] = `
{
  "content": [
    {
      "content": [
        {
          "attrs": {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "__mediaTraceId": null,
            "alt": "",
            "collection": "",
            "height": null,
            "id": "uuid-a-doc (jadsjdasjadsjkdasjk)",
            "localId": null,
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": null,
          },
          "type": "media",
        },
        {
          "attrs": {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "__mediaTraceId": null,
            "alt": "",
            "collection": "",
            "height": null,
            "id": "uuid-not-empty (askjsajnkjknads)",
            "localId": null,
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": null,
          },
          "type": "media",
        },
      ],
      "type": "mediaGroup",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Images and attachments [CS-1404] should parse attachments separated by any number of spaces as one media group 1`] = `
{
  "content": [
    {
      "content": [
        {
          "attrs": {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "__mediaTraceId": null,
            "alt": "",
            "collection": "",
            "height": null,
            "id": "uuid-a-doc (jadsjdasjadsjkdasjk)",
            "localId": null,
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": null,
          },
          "type": "media",
        },
        {
          "attrs": {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "__mediaTraceId": null,
            "alt": "",
            "collection": "",
            "height": null,
            "id": "uuid-not-empty (askjsajnkjknads)",
            "localId": null,
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": null,
          },
          "type": "media",
        },
      ],
      "type": "mediaGroup",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Images and attachments [CS-1404] should parse attachments separated by multiple new lines as separate media groups 1`] = `
{
  "content": [
    {
      "content": [
        {
          "attrs": {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "__mediaTraceId": null,
            "alt": "",
            "collection": "",
            "height": null,
            "id": "uuid-a-doc (jadsjdasjadsjkdasjk)",
            "localId": null,
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": null,
          },
          "type": "media",
        },
      ],
      "type": "mediaGroup",
    },
    {
      "content": [
        {
          "attrs": {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "__mediaTraceId": null,
            "alt": "",
            "collection": "",
            "height": null,
            "id": "uuid-not-empty (askjsajnkjknads)",
            "localId": null,
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": null,
          },
          "type": "media",
        },
      ],
      "type": "mediaGroup",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Images and attachments [CS-1404] should parse attachments separated by non-space character as separate media groups 1`] = `
{
  "content": [
    {
      "content": [
        {
          "attrs": {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "__mediaTraceId": null,
            "alt": "",
            "collection": "",
            "height": null,
            "id": "uuid-a-doc (jadsjdasjadsjkdasjk)",
            "localId": null,
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": null,
          },
          "type": "media",
        },
      ],
      "type": "mediaGroup",
    },
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "a",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "content": [
        {
          "attrs": {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "__mediaTraceId": null,
            "alt": "",
            "collection": "",
            "height": null,
            "id": "uuid-not-empty (askjsajnkjknads)",
            "localId": null,
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": null,
          },
          "type": "media",
        },
      ],
      "type": "mediaGroup",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Images and attachments [CS-1404] should parse consecutive attachments separated by one new line as one media group 1`] = `
{
  "content": [
    {
      "content": [
        {
          "attrs": {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "__mediaTraceId": null,
            "alt": "",
            "collection": "",
            "height": null,
            "id": "uuid-file1",
            "localId": null,
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": null,
          },
          "type": "media",
        },
        {
          "attrs": {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "__mediaTraceId": null,
            "alt": "",
            "collection": "",
            "height": null,
            "id": "uuid-file2",
            "localId": null,
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": null,
          },
          "type": "media",
        },
        {
          "attrs": {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "__mediaTraceId": null,
            "alt": "",
            "collection": "",
            "height": null,
            "id": "uuid-file3",
            "localId": null,
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": null,
          },
          "type": "media",
        },
      ],
      "type": "mediaGroup",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Images and attachments [CS-1404] should parse list of multiple attachments separated by multiple new lines as separate media groups with multiple child media elements 1`] = `
{
  "content": [
    {
      "content": [
        {
          "attrs": {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "__mediaTraceId": null,
            "alt": "",
            "collection": "",
            "height": null,
            "id": "uuid-a-doc (jadsjdasjadsjkdasjk)",
            "localId": null,
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": null,
          },
          "type": "media",
        },
        {
          "attrs": {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "__mediaTraceId": null,
            "alt": "",
            "collection": "",
            "height": null,
            "id": "uuid-not-empty (askjsajnkjknads)",
            "localId": null,
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": null,
          },
          "type": "media",
        },
      ],
      "type": "mediaGroup",
    },
    {
      "content": [
        {
          "attrs": {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "__mediaTraceId": null,
            "alt": "",
            "collection": "",
            "height": null,
            "id": "uuid-a-doc (jadsjdasjadsjkdasjk)",
            "localId": null,
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": null,
          },
          "type": "media",
        },
        {
          "attrs": {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "__mediaTraceId": null,
            "alt": "",
            "collection": "",
            "height": null,
            "id": "uuid-not-empty (askjsajnkjknads)",
            "localId": null,
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": null,
          },
          "type": "media",
        },
      ],
      "type": "mediaGroup",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Images and attachments [CS-1879] should parse media with alt text in quotes 1`] = `
{
  "content": [
    {
      "attrs": {
        "layout": "center",
        "localId": null,
        "width": null,
        "widthType": null,
      },
      "content": [
        {
          "attrs": {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "__mediaTraceId": null,
            "alt": "hello world",
            "collection": "",
            "height": 183,
            "id": "foo.png",
            "localId": null,
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": 200,
          },
          "type": "media",
        },
      ],
      "type": "mediaSingle",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Images and attachments [CS-1879] should parse media with alt text with sensitive characters 1`] = `
{
  "content": [
    {
      "attrs": {
        "layout": "center",
        "localId": null,
        "width": null,
        "widthType": null,
      },
      "content": [
        {
          "attrs": {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "__mediaTraceId": null,
            "alt": "hello world",
            "collection": "",
            "height": 183,
            "id": "foo.png",
            "localId": null,
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": 200,
          },
          "type": "media",
        },
      ],
      "type": "mediaSingle",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Images and attachments [CS-1879] should parse media with alt text without quotes 1`] = `
{
  "content": [
    {
      "attrs": {
        "layout": "center",
        "localId": null,
        "width": null,
        "widthType": null,
      },
      "content": [
        {
          "attrs": {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "__mediaTraceId": null,
            "alt": "hello world",
            "collection": "",
            "height": 183,
            "id": "foo.png",
            "localId": null,
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": 200,
          },
          "type": "media",
        },
      ],
      "type": "mediaSingle",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Images and attachments [CS-3136] should keep two media after one another 1`] = `
{
  "content": [
    {
      "content": [
        {
          "attrs": {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "__mediaTraceId": null,
            "alt": "",
            "collection": "",
            "height": null,
            "id": "2.png",
            "localId": null,
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": null,
          },
          "type": "media",
        },
      ],
      "type": "mediaGroup",
    },
    {
      "attrs": {
        "layout": "center",
        "localId": null,
        "width": null,
        "widthType": null,
      },
      "content": [
        {
          "attrs": {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "__mediaTraceId": null,
            "alt": "",
            "collection": "",
            "height": 183,
            "id": "2.png",
            "localId": null,
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": 200,
          },
          "type": "media",
        },
      ],
      "type": "mediaSingle",
    },
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "foo",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Images and attachments Should parse image with links 1`] = `
{
  "content": [
    {
      "attrs": {
        "layout": "center",
        "localId": null,
        "width": null,
        "widthType": null,
      },
      "content": [
        {
          "attrs": {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "__mediaTraceId": null,
            "alt": "",
            "collection": "",
            "height": 250,
            "id": "73b39312-2853-486c-bc63-9ce187c4bfc7",
            "localId": null,
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": 250,
          },
          "marks": [
            {
              "attrs": {
                "__confluenceMetadata": null,
                "href": "http://google.com",
              },
              "type": "link",
            },
          ],
          "type": "media",
        },
      ],
      "type": "mediaSingle",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Images and attachments should add collection from context 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "Hello! ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "layout": "center",
        "localId": null,
        "width": null,
        "widthType": null,
      },
      "content": [
        {
          "attrs": {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "__mediaTraceId": null,
            "alt": "",
            "collection": "my-test-collection",
            "height": 183,
            "id": "9db1eca8-8257-4763-92fb-e6417f9e34c9",
            "localId": null,
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": 200,
          },
          "type": "media",
        },
      ],
      "type": "mediaSingle",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Images and attachments should clamp media with percentage width > 100% 1`] = `
{
  "content": [
    {
      "attrs": {
        "layout": "center",
        "localId": null,
        "width": 100,
        "widthType": null,
      },
      "content": [
        {
          "attrs": {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "__mediaTraceId": null,
            "alt": "",
            "collection": "",
            "height": null,
            "id": "fizzbuzz.txt",
            "localId": null,
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": null,
          },
          "type": "media",
        },
      ],
      "type": "mediaSingle",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Images and attachments should find absolute URL images and convert it to external media item 1`] = `
{
  "content": [
    {
      "attrs": {
        "layout": "center",
        "localId": null,
        "width": null,
        "widthType": null,
      },
      "content": [
        {
          "attrs": {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "__mediaTraceId": null,
            "alt": "",
            "collection": "",
            "height": 183,
            "id": "",
            "localId": null,
            "occurrenceKey": null,
            "type": "external",
            "url": "http://www.host.com/image.gif",
            "width": 200,
          },
          "type": "media",
        },
      ],
      "type": "mediaSingle",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Images and attachments should find attachments in multiline string 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "this is a line of text",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "layout": "center",
        "localId": null,
        "width": null,
        "widthType": null,
      },
      "content": [
        {
          "attrs": {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "__mediaTraceId": null,
            "alt": "",
            "collection": "",
            "height": 183,
            "id": "uuid-image",
            "localId": null,
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": 200,
          },
          "type": "media",
        },
      ],
      "type": "mediaSingle",
    },
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "yep",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Images and attachments should find attachments with attributes 1`] = `
{
  "content": [
    {
      "attrs": {
        "layout": "center",
        "localId": null,
        "width": null,
        "widthType": null,
      },
      "content": [
        {
          "attrs": {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "__mediaTraceId": null,
            "alt": "",
            "collection": "",
            "height": 400,
            "id": "uuid-quicktime",
            "localId": null,
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": 300,
          },
          "type": "media",
        },
      ],
      "type": "mediaSingle",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Images and attachments should find attachments with percentage width attribute 1`] = `
{
  "content": [
    {
      "attrs": {
        "layout": "center",
        "localId": null,
        "width": 50,
        "widthType": null,
      },
      "content": [
        {
          "attrs": {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "__mediaTraceId": null,
            "alt": "",
            "collection": "",
            "height": null,
            "id": "fizzbuzz.txt",
            "localId": null,
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": null,
          },
          "type": "media",
        },
      ],
      "type": "mediaSingle",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Images and attachments should find images in a multiline string with return symbols 1`] = `
{
  "content": [
    {
      "attrs": {
        "layout": "center",
        "localId": null,
        "width": null,
        "widthType": null,
      },
      "content": [
        {
          "attrs": {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "__mediaTraceId": null,
            "alt": "",
            "collection": "",
            "height": 183,
            "id": "uuid-Kapture",
            "localId": null,
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": 200,
          },
          "type": "media",
        },
      ],
      "type": "mediaSingle",
    },
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "Foo",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Images and attachments should find images in the text 1`] = `
{
  "content": [
    {
      "attrs": {
        "layout": "center",
        "localId": null,
        "width": null,
        "widthType": null,
      },
      "content": [
        {
          "attrs": {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "__mediaTraceId": null,
            "alt": "",
            "collection": "",
            "height": 183,
            "id": "uuid-image",
            "localId": null,
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": 200,
          },
          "type": "media",
        },
      ],
      "type": "mediaSingle",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Images and attachments should transform attachment next to image 1`] = `
{
  "content": [
    {
      "content": [
        {
          "attrs": {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "__mediaTraceId": null,
            "alt": "",
            "collection": "",
            "height": null,
            "id": "document.pdf",
            "localId": null,
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": null,
          },
          "type": "media",
        },
      ],
      "type": "mediaGroup",
    },
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": " ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "layout": "center",
        "localId": null,
        "width": null,
        "widthType": null,
      },
      "content": [
        {
          "attrs": {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "__mediaTraceId": null,
            "alt": "",
            "collection": "",
            "height": 183,
            "id": "uuid-image",
            "localId": null,
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": 200,
          },
          "type": "media",
        },
      ],
      "type": "mediaSingle",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Images and attachments should transform filename to id for attachment links if NOT present in context 1`] = `
{
  "content": [
    {
      "content": [
        {
          "attrs": {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "__mediaTraceId": null,
            "alt": "",
            "collection": "",
            "height": null,
            "id": "document.pdf",
            "localId": null,
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": null,
          },
          "type": "media",
        },
      ],
      "type": "mediaGroup",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Images and attachments should transform filename to id for embeddable attachments if NOT present in context 1`] = `
{
  "content": [
    {
      "attrs": {
        "layout": "center",
        "localId": null,
        "width": null,
        "widthType": null,
      },
      "content": [
        {
          "attrs": {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "__mediaTraceId": null,
            "alt": "",
            "collection": "",
            "height": 183,
            "id": "Screen Shot.jpeg",
            "localId": null,
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": 200,
          },
          "type": "media",
        },
      ],
      "type": "mediaSingle",
    },
  ],
  "type": "doc",
}
`;
